feat: add endpoint for receiving friends birthdays, deleted doubling of starters from pom, optimised friendRestController